cmake_minimum_required(VERSION 3.30)
project(Grepster VERSION 0.3.5 DESCRIPTION "Grepster tool" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(BUILD_SHARED_LIBS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
option(ENABLE_TESTING "Enable Unit Testing Build" OFF)

add_subdirectory(src)
add_subdirectory(library)
add_subdirectory(third_party)
if (ENABLE_TESTING)
    add_subdirectory(tests)
    include(CTest)
    enable_testing()
endif()